--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="logo-brand">
                 <a href="/">
-                    <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="LIGHTPLUG" class="logo-img">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="LIGHTPLUG" class="logo-img">
                     <span class="brand-name">LIGHTPLUG</span>
                 </a>
             </div>
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li class="auth-btn"><a href="/login" class="btn-login">Login</a></li>
                     <li class="auth-btn"><a href="/register" class="btn-register">Register</a></li>
                 </ul>
