--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
             <button class="menu-btn" id="menu-toggle-btn"><i class="fas fa-bars"></i></button> {# Added ID #}
         </div>
         <div class="header-center">
-            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="LIGHTPLUG" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="LIGHTPLUG" class="logo">
         </div>
         <div class="header-right">
             <label class="theme-switch" for="theme-toggle">
