--- a/templates/education_pins.html
+++ b/templates/education_pins.html
@@ -14,7 +14,7 @@
             <button class="menu-btn" onclick="history.back()"><i class="fas fa-arrow-left"></i></button>
         </div>
         <div class="header-center">
-            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="LIGHTPLUG" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="LIGHTPLUG" class="logo">
         </div>
         <div class="header-right">
             <label class="theme-switch" for="theme-toggle">
