--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
             <button class="menu-btn"><i class="fas fa-bars"></i></button>
         </div>
         <div class="header-center">
-            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="LIGHTPLUG" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="LIGHTPLUG" class="logo">
         </div>
         <div class="header-right">
             <button class="notif-btn"><i class="fas fa-bell"></i></button>
