--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -8,7 +8,7 @@
 </head>
 <body class="auth-page">
     <div class="auth-box">
-        <img src="{{ url_for('static', filename='images/logo.jpg') }}" 
+        <img src="{{ url_for('static', filename='images/logo.png') }}" 
              alt="LIGHTPLUG" 
              class="auth-logo">
         
